traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:25: error: illegal start of simple expression
      else if(y == hauteur - 1)
      ^